; ModuleID = '/home/carl/AnghaBench/tmux/compat/extr_imsg-buffer.c_ibuf_add.c'
source_filename = "/home/carl/AnghaBench/tmux/compat/extr_imsg-buffer.c_ibuf_add.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ibuf = type { i64, i64, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ibuf_add(%struct.ibuf* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.ibuf*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  store %struct.ibuf* %0, %struct.ibuf** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  %8 = load %struct.ibuf*, %struct.ibuf** %5, align 8
  %9 = getelementptr inbounds %struct.ibuf, %struct.ibuf* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = load i64, i64* %7, align 8
  %12 = add i64 %10, %11
  %13 = load %struct.ibuf*, %struct.ibuf** %5, align 8
  %14 = getelementptr inbounds %struct.ibuf, %struct.ibuf* %13, i32 0, i32 1
  %15 = load i64, i64* %14, align 8
  %16 = icmp ugt i64 %12, %15
  br i1 %16, label %17, label %24

17:                                               ; preds = %3
  %18 = load %struct.ibuf*, %struct.ibuf** %5, align 8
  %19 = load i64, i64* %7, align 8
  %20 = call i32 @ibuf_realloc(%struct.ibuf* %18, i64 %19)
  %21 = icmp eq i32 %20, -1
  br i1 %21, label %22, label %23

22:                                               ; preds = %17
  store i32 -1, i32* %4, align 4
  br label %40

23:                                               ; preds = %17
  br label %24

24:                                               ; preds = %23, %3
  %25 = load %struct.ibuf*, %struct.ibuf** %5, align 8
  %26 = getelementptr inbounds %struct.ibuf, %struct.ibuf* %25, i32 0, i32 2
  %27 = load i64, i64* %26, align 8
  %28 = load %struct.ibuf*, %struct.ibuf** %5, align 8
  %29 = getelementptr inbounds %struct.ibuf, %struct.ibuf* %28, i32 0, i32 0
  %30 = load i64, i64* %29, align 8
  %31 = add nsw i64 %27, %30
  %32 = load i8*, i8** %6, align 8
  %33 = load i64, i64* %7, align 8
  %34 = call i32 @memcpy(i64 %31, i8* %32, i64 %33)
  %35 = load i64, i64* %7, align 8
  %36 = load %struct.ibuf*, %struct.ibuf** %5, align 8
  %37 = getelementptr inbounds %struct.ibuf, %struct.ibuf* %36, i32 0, i32 0
  %38 = load i64, i64* %37, align 8
  %39 = add i64 %38, %35
  store i64 %39, i64* %37, align 8
  store i32 0, i32* %4, align 4
  br label %40

40:                                               ; preds = %24, %22
  %41 = load i32, i32* %4, align 4
  ret i32 %41
}

declare dso_local i32 @ibuf_realloc(%struct.ibuf*, i64) #1

declare dso_local i32 @memcpy(i64, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
